--- a/ml/0_basic_probabilities.ipynb
+++ b/ml/0_basic_probabilities.ipynb
@@ -33,9 +33,13 @@
     "\n",
     "&emsp; $\\displaystyle C(x) = P(X \\le x) = \\sum_{x' \\le x} P(x')$\n",
     "\n",
-    "The **expected value** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$ (technically, the expected value is a *functional*: a function that takes a function and returns a real number):\n",
+    "The **expectation** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$ (technically, the expectation is a *functional* as it takes a function as input). The **expected value** is the expectation of the value of $X$:\n",
     "\n",
     "&emsp; $\\displaystyle E_X[f] = \\sum_{x \\in X} f(x) P(x)$\n",
+    "&emsp; (expectation of $f(X)$)\n",
+    "\n",
+    "&emsp; $\\displaystyle E_X[X] = \\sum_{x \\in X} x P(x)$\n",
+    "&emsp; (expected value of $X$)\n",
     "\n",
     "The **variance** of $X$ is the expected value of the square of the difference between the values taken by the random variable $X$ and the mean value of $X$. The **standard deviation** is the square root of the variance, and expresses the *spread* of a distribution around its mean:\n",
     "\n",
@@ -69,9 +73,13 @@
     "&emsp; $\\implies$\n",
     "&emsp; $\\displaystyle p(x) = \\frac{d}{dx} C(x)$\n",
     "\n",
-    "The **expected value** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$ (technically, the expected value is a *functional*: a function that takes a function and returns a real number):\n",
+    "The **expectation** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$. The **expected value** is the expectation of the value of $X$ (or the average):\n",
     "\n",
     "&emsp; $\\displaystyle E_X[f] = \\int f(x) p(x) dx$\n",
+    "&emsp; (expectation of $f(X)$)\n",
+    "\n",
+    "&emsp; $\\displaystyle E_X[X] = \\int x p(x) dx$\n",
+    "&emsp; (expected value of $X$)\n",
     "\n",
     "The **variance** of $X$ is the expected value of the square of the difference between the values taken by the random variable $X$ and the mean value of $X$. The **standard deviation** is the square root of the variance, and expresses the *spread* of a distribution around its mean:\n",
     "\n",
