--- a/ml/0_basic_sampling_1.ipynb
+++ b/ml/0_basic_sampling_1.ipynb
@@ -19,14 +19,14 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Motivation: evaluating expected values\n",
+    "# Motivation: Evaluating Expectations\n",
     "---\n",
     "\n",
-    "We will often be interested in evaluating the expectation of some function $f$, such that there are no known closed form for:\n",
+    "There are many cases, such as most Bayesian approaches, in which we need to evaluate the expectation of some function $f$. Except for the most trivial cases, the formula for **the expectation will not have a closed form**:\n",
     "\n",
     "&emsp; $\\displaystyle E[f] = \\int f(x) p(x) dx$\n",
     "\n",
-    "The simple approach we can use in such cases is to draw samples $(x_1 \\dots x_L)$ from $p(x)$ and do a sample average of the values $f(x_1) \\dots f(x_L)$ obtained:\n",
+    "In such cases, one approach is to draw samples $(x_1 \\dots x_L)$ from $p$ and do a sample average of the values $f(x_1) \\dots f(x_L)$ obtained:\n",
     "\n",
     "&emsp; $\\displaystyle \\hat{f} = \\frac{1}{L} \\sum_l f(x_l)$\n",
     "&emsp; $\\implies$\n",
@@ -34,28 +34,7 @@
     "&emsp; and\n",
     "&emsp; $\\displaystyle \\sigma^2[\\hat{f}] = \\frac{\\sigma^2[f]}{L}$\n",
     "\n",
-    "This is how we can easily estimate the mean and variance of a gaussian:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean: -0.011014664411155931\n",
-      "Variance: 0.9953507703209511\n"
-     ]
-    }
-   ],
-   "source": [
-    "L = 5000\n",
-    "xs = np.random.normal(loc=0., scale=1., size=L)\n",
-    "print(\"Mean:\", np.sum(xs) / L)\n",
-    "print(\"Variance:\", np.sum(xs**2) / L)"
+    "But even this might be complex. In many cases, such as Density Estimation, we might know the value of $p(z)$ for all $z$, but do not have an analytical formula for $p(z)$. Even if we do have an analytical formula, **sampling for an arbitrary distribution is not so easy**."
    ]
   },
   {
@@ -322,11 +301,13 @@
    "source": [
     "<br>\n",
     "\n",
-    "### Issues with both models\n",
+    "### Issues with both techniques\n",
     "\n",
-    "These approaches **do not work well for multivariate distributions**, as a consequence of the curse of dimensionality: gap between $q$ and $p$ becomes more prevalent as the dimensions increases. There are mostly used as **building blocks** for these complex distributions, often by allowing to sample from a **conditional univariate distribution**, for example to sample from $p(x_i|{x}_{j \\ne i})$.\n",
+    "These approaches **do not work well for multivariate distributions**, as a consequence of the curse of dimensionality: gap between $q$ and $p$ becomes more prevalent as the dimensions increases.\n",
     "\n",
-    "These approaches also have issues based on the difficulty of finding a suitable $q$ that is close to $p$. These issues are circumvented through other techniques such as **adaptative rejection sampling** which creates a **convex hull** around the distribution $p$ that shrinks as the number of samples gets higher."
+    "These techniques are mostly used as **building blocks** for these complex distributions, often by allowing to sample from a **conditional univariate distribution**, for example to sample from $p(x_i|{x}_{j \\ne i})$.\n",
+    "\n",
+    "These approaches also have issues based on the difficulty of finding a suitable $q$ that is close to $p$. These issues are circumvented through other techniques such as **adaptative rejection sampling** which creates a **convex hull** around the distribution $p$ which shrinks as the number of samples gets higher (it requires the distribution to be *convex* through)."
    ]
   },
   {
