--- a/ml/6_embeddings.ipynb
+++ b/ml/6_embeddings.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Motivation: looking for compact useful representations\n",
+    "# Motivation: compact and useful representations\n",
     "---\n",
     "\n",
     "Say we have a tree or a graph as input, that represents some kind of hierarchy or interconnections we care about. We are interested in dealing with this graph in a particular manner. For instance, we care a lot about the shortest distance between every elements, and we to be able to retrieve this information really fast:\n",
@@ -214,23 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-2.5822027  -2.2682648  -1.1353315 ]\n",
-      " [-1.804915   -1.7730147  -0.8022669 ]\n",
-      " [-1.0314714  -1.2572559  -0.30822977]\n",
-      " [-0.15626545 -0.7450345   0.23122452]\n",
-      " [ 0.33805433 -1.6743208   1.0473077 ]\n",
-      " [ 0.21693973  0.23185001  0.23623629]\n",
-      " [ 1.5285734   1.7395054  -0.17462383]\n",
-      " [ 2.2963858   2.2836816  -0.56223506]\n",
-      " [ 0.6535118   1.1731334   0.30365378]\n",
-      " [ 0.29310623  2.0348458   1.2447968 ]]\n",
+      "Distances in embedding:\n",
       "[[0. 1. 2. 3. 4. 4. 6. 7. 5. 6.]\n",
       " [1. 0. 1. 2. 3. 3. 5. 6. 4. 5.]\n",
       " [2. 1. 0. 1. 2. 2. 4. 5. 3. 4.]\n",
@@ -241,6 +232,7 @@
       " [7. 6. 5. 4. 5. 3. 1. 0. 2. 3.]\n",
       " [5. 4. 3. 2. 3. 1. 1. 2. 0. 1.]\n",
       " [6. 5. 4. 3. 4. 2. 2. 3. 1. 0.]]\n",
+      "Distances in graph:\n",
       "[[0. 1. 2. 3. 4. 4. 6. 7. 5. 6.]\n",
       " [1. 0. 1. 2. 3. 3. 5. 6. 4. 5.]\n",
       " [2. 1. 0. 1. 2. 2. 4. 5. 3. 4.]\n",
@@ -268,19 +260,132 @@
    ],
    "source": [
     "embeddings = model.embedding.weight.detach().numpy()\n",
-    "print(embeddings)\n",
-    "\n",
     "got_distances = np.zeros(shape=(N, N))\n",
     "for i in range(N):\n",
     "    for j in range(N):\n",
     "        got_distances[i][j] = np.linalg.norm(embeddings[i] - embeddings[j])\n",
+    "        \n",
+    "\n",
+    "print(\"Distances in embedding:\")\n",
     "print(np.round(got_distances, decimals=0))\n",
+    "\n",
+    "print(\"Distances in graph:\")\n",
     "print(distances)\n",
     "\n",
     "fig = plt.figure(figsize=(10,8))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "ax.scatter(embeddings[:,0], embeddings[:,1], embeddings[:,2])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Knowledge graphs => Embeddings\n",
+    "---\n",
+    "\n",
+    "The technique shown above is generally useful for other examples in which a **graph structure** is present (although it might not always be obvious).\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Word embeddings\n",
+    "\n",
+    "The main place in which embeddings are popular at this time is for **Natural Language Processing** (NLP). Here, embeddings are used to represent a word as a vector, so that this vector can be proceeded by a Machine Learning algorithm.\n",
+    "\n",
+    "Indeed, words cannot be fed as text to most algorithms, and one should be very careful when representing words as numbers: **any order in the number will be used by a Neural Net and should better represent some real relationship**.\n",
+    "\n",
+    "* close numbers means close meaning for a machine\n",
+    "* several notions of \"closeness\" means several dimension\n",
+    "\n",
+    "Word embeddings are typically trained by building a kind of knowledge graph with unsupervised learning, by feeding a lot of text:\n",
+    "\n",
+    "* We try to predict a the word in a middle of 10 words for instance (bag of words)\n",
+    "* We try to predict the words surrounding a word (skip-gram)\n",
+    "* We try to predict the next word after 5 words (language model)\n",
+    "\n",
+    "This will have the tendency to represent the close-to relations in the embeddings. Words that are close semantically will be close in their representation (short distance). Relations such as \"is-capital-of\" will be represented by constant vectors, and such."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from annoy import AnnoyIndex\n",
+    "import torchtext\n",
+    "\n",
+    "fast_text = torchtext.vocab.FastText(max_vectors=10_000)\n",
+    "index = AnnoyIndex(fast_text.vectors.shape[1])\n",
+    "for i in range(fast_text.vectors.shape[0]):\n",
+    "    index.add_item(i, fast_text.vectors[i])\n",
+    "index.build(5)\n",
+    "\n",
+    "def show_neighbors(word):\n",
+    "    i = fast_text.stoi.get(word)\n",
+    "    indices = index.get_nns_by_vector(fast_text.vectors[i], n=10)\n",
+    "    return [fast_text.itos[i] for i in indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['car',\n",
+       " 'cars',\n",
+       " 'truck',\n",
+       " 'vehicle',\n",
+       " 'driver',\n",
+       " 'driving',\n",
+       " 'vehicles',\n",
+       " 'motorcycle',\n",
+       " 'chassis',\n",
+       " 'bmw']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_neighbors('car')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Recommendation systems\n",
+    "\n",
+    "Recommending friends or films can be approached the same way. As for most graph problems, the key is not so much to know that most problems can be seen as graph problems, but to actually **construct the graph that you care about**.\n",
+    "\n",
+    "For instance, for films, we could try to encode the likes as a **bipartite graph** (films nodes, linked to person nodes) and that could allow us to have some connectivity metrics between persons: how many films do you have in common that you like, vs those not in common. This could define a metric: the closer the are, the more film you have in common.\n",
+    "\n",
+    "This in turn can be used to help find films that some similar person of you liked, but you did not watched for now."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Other examples\n",
+    "---\n",
+    "\n",
+    "* similar faces / images (example MNIST)\n",
+    "* similar tasted in films\n",
+    "* similar words"
    ]
   },
   {
