--- a/ml/0_basic_calculus_1.ipynb
+++ b/ml/0_basic_calculus_1.ipynb
@@ -106,9 +106,9 @@
     "\n",
     "To compute the differentials along each dimensions, and similarly was what we did for the gradient, we multiply the Jacobian matrix with a vector $dx = (dx_1, \\dots dx_N)^T$ containing the differentials of the inputs:\n",
     "\n",
-    "&emsp; $\\displaystyle \\begin{pmatrix} df_1 \\\\ \\vdots \\\\ df_M \\end{pmatrix} = \\begin{pmatrix} \\nabla f_1 . dx \\\\ \\vdots \\\\ \\nabla f_M . dx \\end{pmatrix} = \\begin{pmatrix} \\nabla f_1 \\\\ \\vdots \\\\ \\nabla f_M \\end{pmatrix} \\begin{pmatrix} dx_1 \\\\ \\vdots \\\\ dx_N \\end{pmatrix} = J \\; dx$\n",
+    "&emsp; $\\displaystyle \\begin{pmatrix} df_1 \\\\ \\vdots \\\\ df_M \\end{pmatrix} = \\begin{pmatrix} \\nabla f_1 . dx \\\\ \\vdots \\\\ \\nabla f_M . dx \\end{pmatrix} = \\begin{pmatrix} \\nabla f_1 \\\\ \\vdots \\\\ \\nabla f_M \\end{pmatrix} \\begin{pmatrix} dx_1 \\\\ \\vdots \\\\ dx_N \\end{pmatrix} = J_f \\; dx$\n",
     "\n",
-    "Note that the Jacobian has properties that are similar to the gradient: the level curves are replaced by the **null space (or kernel)** of the Jacobian, defined by all the vector $u$ such that: $J u = 0$. This equation is similar to the **orthogonality property** of the gradient."
+    "Note that the Jacobian has properties that are similar to the gradient: the level curves are replaced by the **null space (or kernel)** of the Jacobian: all the vector $u$ such that: $J u = 0$. This equation is similar to the **orthogonality property** of the gradient. The Jacobian of a function with just one output is the transpose of the gradient."
    ]
   },
   {
@@ -162,9 +162,11 @@
     "\n",
     "We see from the indices that it ressembles matrix multiplication. It can indeed be re-written as a **product between the gradient of $f$ with respect to $x$ and the Jacobian of $x$ with respect to $y$**:\n",
     "\n",
-    "&emsp; $\\displaystyle \\nabla_{y} f = \\begin{pmatrix} \\frac{\\partial f}{\\partial x_1} & \\dots & \\frac{\\partial f}{\\partial x_M} \\end{pmatrix} \\begin{pmatrix} \\frac{\\partial x_1}{\\partial y_1} & \\dots & \\frac{\\partial x_1}{\\partial y_N} \\\\ \\vdots & & \\vdots \\\\ \\frac{\\partial x_M}{\\partial y_1} & \\dots & \\frac{\\partial x_M}{\\partial y_N} \\end{pmatrix}$\n",
+    "&emsp; $\\displaystyle (\\nabla_{y} f)^T = \\begin{pmatrix} \\frac{\\partial f}{\\partial x_1} & \\dots & \\frac{\\partial f}{\\partial x_M} \\end{pmatrix} \\begin{pmatrix} \\frac{\\partial x_1}{\\partial y_1} & \\dots & \\frac{\\partial x_1}{\\partial y_N} \\\\ \\vdots & & \\vdots \\\\ \\frac{\\partial x_M}{\\partial y_1} & \\dots & \\frac{\\partial x_M}{\\partial y_N} \\end{pmatrix}$\n",
     "&emsp; $\\implies$\n",
-    "&emsp; $\\boxed{\\nabla_{y} f = (\\nabla_x f)^T J_y(x)}$"
+    "&emsp; $\\boxed{(\\nabla_{y} f)^T = (\\nabla_x f)^T J_y(x)}$\n",
+    "&emsp; or\n",
+    "&emsp; $\\boxed{J_{y}(f) = J_x(f) J_y(x)}$"
    ]
   },
   {
