--- a/ml/0_basic_calculus_2.ipynb
+++ b/ml/0_basic_calculus_2.ipynb
@@ -81,7 +81,9 @@
    "source": [
     "<br>\n",
     "\n",
-    "### Matrix calculus"
+    "### Eigenvalues of Jacobians\n",
+    "\n",
+    "* to determine the exploding of vanishing gradients"
    ]
   },
   {
