--- a/ml/0_basic_probabilities.ipynb
+++ b/ml/0_basic_probabilities.ipynb
@@ -16,10 +16,14 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Probability mass functions\n",
+    "# Discrete random variables\n",
     "---\n",
     "\n",
     "A random variable $X$ is a variable whose value depends on some random phenomenon. A **discrete random variable** is a variable which has a countable number of values $\\mathcal{X}$ (which might still be infinite, such as $\\mathbb{N}$ or $\\mathbb{Z}$).\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Probabilities\n",
     "\n",
     "The **probability mass function** of $X$ gives a numerical description of how much each value of $X$ is likely to occur. The probability of $X$ taking exactly the value $x$ is noted $P(X=x)$, $P_X(x)$ or $P(x)$ when not ambigious. The **mode** of a probability mass function is the value $x \\in \\mathcal{X}$ with the highest associated probability. There can be several mode of a distribution.\n",
     "\n",
@@ -33,13 +37,40 @@
     "\n",
     "&emsp; $\\displaystyle C(x) = P(X \\le x) = \\sum_{x' \\le x} P(x')$\n",
     "\n",
-    "The **expectation** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$ (technically, the expectation is a *functional* as it takes a function as input). The **expected value** is the expectation of the value of $X$:\n",
+    "<br>\n",
+    "\n",
+    "### Sum and product rules\n",
+    "\n",
+    "The product rules allows us to express the joint distribution as a product of conditional distributions:\n",
+    "\n",
+    "&emsp; $\\displaystyle P(X,Y|\\mathcal{H}) = P(X|Y,\\mathcal{H})P(Y|\\mathcal{H}) = P(Y|X,\\mathcal{H})P(X|\\mathcal{H})$\n",
+    "\n",
+    "The sum rule, or marginalization rule, allows us to summarize probablities on $X$ and $Y$ by summing overall possibles values of $Y$, or to introduce a new variable $Y$ if taken in the other direction:\n",
+    "\n",
+    "&emsp; $\\displaystyle P(X|\\mathcal{H}) = \\sum_Y P(X,Y|\\mathcal{H}) = \\sum_Y P(X|Y,\\mathcal{H})P(Y|\\mathcal{H})$\n",
+    "\n",
+    "The product rule gives us the Bayes rule, which can be further rewriten using the sum rule.\n",
+    "\n",
+    "&emsp; $\\displaystyle P(X|Y,\\mathcal{H}) = \\frac{P(Y|X,\\mathcal{H})P(X|\\mathcal{H})}{P(Y|\\mathcal{H})}$\n",
+    "&emsp; where\n",
+    "&emsp; $\\displaystyle P(Y|\\mathcal{H}) = \\sum_{X} P(Y|X,\\mathcal{H})P(X|\\mathcal{H})$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Expected value\n",
+    "\n",
+    "The **expected value** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$ (technically, the expectation is a *functional* as it takes a function as input):\n",
     "\n",
     "&emsp; $\\displaystyle E_X[f] = \\sum_{x \\in X} f(x) P(x)$\n",
-    "&emsp; (expectation of $f(X)$)\n",
+    "&emsp; (expected value of $f(X)$)\n",
     "\n",
     "&emsp; $\\displaystyle E_X[X] = \\sum_{x \\in X} x P(x)$\n",
-    "&emsp; (expected value of $X$)\n",
+    "&emsp; &emsp; (expected value of the random variable $X$)\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Variance\n",
     "\n",
     "The **variance** of $X$ is the expected value of the square of the difference between the values taken by the random variable $X$ and the mean value of $X$. The **standard deviation** is the square root of the variance, and expresses the *spread* of a distribution around its mean:\n",
     "\n",
@@ -56,10 +87,14 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Probability density functions\n",
+    "# Continuous random variables\n",
     "---\n",
     "\n",
     "A **continuous random variable** is a variable which has a non-countable number of values $\\mathcal{X}$ (such as $\\mathbb{R}$). Because the values are not countable, there notion of probability mass function would be meaningless (the probability of taking exactly one value is likely to be zero).\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Probabilities\n",
     "\n",
     "The **probability density function** of $X$ gives a relative numerical description of how much a value is likely to occur,  noted $p(X=x)$, $p_X(x)$ or $p(x)$ if not ambiguous. The probability of a the value $\\mathcal{X}$ being found in the interval $[a,b]$ is the integral of $p(x)$ between $a$ and $b$:\n",
     "\n",
@@ -73,13 +108,36 @@
     "&emsp; $\\implies$\n",
     "&emsp; $\\displaystyle p(x) = \\frac{d}{dx} C(x)$\n",
     "\n",
-    "The **expectation** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$. The **expected value** is the expectation of the value of $X$ (or the average):\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Sum and product rules\n",
+    "\n",
+    "The product rules allows us to express the joint distribution as a product of conditional distributions, and remains unchanged for the probability densities. The sum rule, or marginalization rule, allows us to summarize probablities on $X$ and $Y$ by summing overall possibles values of $Y$, and features an integral instead of a sum:\n",
+    "\n",
+    "&emsp; $\\displaystyle p(x) = \\int_{y \\in Y} p(x,y) dy = \\int_{y \\in Y} p(x|y)p(y) dy$\n",
+    "\n",
+    "The product rule gives us the Bayes rule, which can be further rewriten using the sum rule:\n",
+    "\n",
+    "&emsp; $\\displaystyle p(x|y,\\mathcal{h}) = \\frac{p(y|x,\\mathcal{h})p(x|\\mathcal{h})}{p(y|\\mathcal{h})}$\n",
+    "&emsp; where\n",
+    "&emsp; $\\displaystyle p(y|\\mathcal{h}) = \\int_x p(y|x,\\mathcal{h})p(x|\\mathcal{h}) dx$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Expected values\n",
+    "\n",
+    "The **expected value** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$:\n",
     "\n",
     "&emsp; $\\displaystyle E_X[f] = \\int f(x) p(x) dx$\n",
-    "&emsp; (expectation of $f(X)$)\n",
+    "&emsp; (expected value of $f(X)$)\n",
     "\n",
     "&emsp; $\\displaystyle E_X[X] = \\int x p(x) dx$\n",
-    "&emsp; (expected value of $X$)\n",
+    "&emsp; &emsp; (expected value of the random variable $X$)\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Variance\n",
     "\n",
     "The **variance** of $X$ is the expected value of the square of the difference between the values taken by the random variable $X$ and the mean value of $X$. The **standard deviation** is the square root of the variance, and expresses the *spread* of a distribution around its mean:\n",
     "\n",
@@ -88,6 +146,35 @@
     "&emsp; $\\displaystyle \\text{Cov}[X,Y] = \\iint (x - E[X]) \\; (y - E[Y]) \\; p(x,y) \\; dx \\; dy$\n",
     "\n",
     "Some distributions do not have a variance because the integral is not defined."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Prior, Posteriors, Likelihoods\n",
+    "---\n",
+    "\n",
+    "When we use the Bayes theorem, we are often interested in **infering the cause $c$ that explains the effect** $e$. For instance, when doing classification of images, we are in fact interested in knowing whether a cat or a dog is responsible for generated the image.\n",
+    "\n",
+    "&emsp; $\\displaystyle p(c|e) = \\frac{p(e|c)p(c)}{p(e)}$\n",
+    "&emsp; where\n",
+    "&emsp; $c$ is the cause\n",
+    "&emsp; and\n",
+    "&emsp; $e$ is the effect (the observation)\n",
+    "\n",
+    "We often refer to the different parts of this formula are *priors*, *posterior* and *likelihood*:\n",
+    "\n",
+    "* The **prior** is the a priory probability of the cause $p(c)$\n",
+    "* The **posterior** is the adjusted probability of the cause, given the evidence $p(c|e)$\n",
+    "* The **likelihood** is the probablity that the cause explains the effect $p(e|c)$\n",
+    "\n",
+    "We call $p(e|c)$ a likelihood and not a conditional probability because it is a function of the the effect, but of the cause (which is what we are looking for). Therefore, **likelihoods do not define a probability distribution**, and in particular, do not sum to 1. So in short:\n",
+    "\n",
+    "* $p(x|y)$ is a conditional probability distrubtion if viewed as a function of $x$\n",
+    "* $p(x|y)$ is the likelihood of $x$ given $y$ if viewed as a function of $y$"
    ]
   },
   {
