--- a/ml/0_basic_distribution_gaussian.ipynb
+++ b/ml/0_basic_distribution_gaussian.ipynb
@@ -16,12 +16,22 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Gaussian distribution\n",
+    "# Univariate Gaussian\n",
     "---\n",
     "\n",
-    "* properties of maximizing entropy\n",
-    "* properties of joint property (multiple data point => covariance matrix like $\\alpha I$)\n",
-    "* conjugate distribution"
+    "The formula for a univariate Gaussian (or normal) distribution:\n",
+    "\n",
+    "&emsp; $\\boxed{\\mathcal{N}(x|\\mu,\\sigma^2) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} e^{\\textstyle - \\frac{(x-\\mu)^2}{2 \\sigma^2}}}$\n",
+    "&emsp; where\n",
+    "&emsp; $\\mathbb{E}[x] = \\mu$\n",
+    "&emsp; and\n",
+    "&emsp; $\\mathbb{V}[x] = \\sigma^2$\n",
+    "\n",
+    "* integration factor (how do we do it)\n",
+    "* second order in exponential distribution\n",
+    "* sufficient statistics\n",
+    "* moments\n",
+    "* maximizing entropy"
    ]
   },
   {
@@ -30,8 +40,37 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Poisson distribution\n",
-    "---"
+    "# Multivariate Gaussian\n",
+    "---\n",
+    "\n",
+    "* slicing\n",
+    "* not the same as conditional gaussian\n",
+    "* laws of deductions\n",
+    "* PCA to find the axis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Multiple data points\n",
+    "---\n",
+    "\n",
+    "* independence => covariance matrix of the form $\\alpha^{-1} I_n$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Conjugate priors\n",
+    "---\n",
+    "\n",
+    "* todo"
    ]
   },
   {
