--- a/ml/0_basic_probabilities.ipynb
+++ b/ml/0_basic_probabilities.ipynb
@@ -183,6 +183,19 @@
    "source": [
     "<br>\n",
     "\n",
+    "# Odds\n",
+    "---\n",
+    "\n",
+    "* odds\n",
+    "* un-normalized probabilities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
     "# Independence\n",
     "---\n",
     "\n",
